# gREV

./: .gitignore  Dockerfile  LICENSE  README.md  README_github.md  context.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
grev/: env.py  models.py
server/: app.py
server/static/: index.html
tasks/easy/: calculator.py  test_calculator.py  test_main.py
tasks/hard/: auth.py  fetcher.py  models.py  test_auth.py  test_fetcher.py
tasks/medium/: data_processor.py  parser.py  test_data_processor.py  test_parser.py
