[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grev"
version = "0.1.0"
description = "gREV — OpenEnv benchmark for autonomous code repair"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.0.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "grev.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["grev", "grev.server"]
package-dir = { "grev" = ".", "grev.server" = "server" }
